# A.P.E.X.

./: .env.example  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  .prettierrc  AGENTS.md  CHANGELOG.md  README.md  docker-compose.yml  pyproject.toml  repository.yaml  sync-addon.sh
.cursor/: mcp.json
.cursor/rules/: apex-device-naming.mdc  apex-do-it-yourself.mdc  apex-no-secrets-in-code.mdc  apex-orchestration.mdc  apex-project.mdc  change-tracking.mdc
.github/workflows/: check-secrets.yml  test-and-lint.yml
apex_brain/: Dockerfile  build.json  config.yaml  requirements.txt  run.sh
apex_brain/brain/: config.py  conversation.py  server.py  system_prompt.py  version.py
apex_brain/memory/: context_builder.py  conversation_store.py  fact_extractor.py  knowledge_store.py
apex_brain/tests/: __init__.py  conftest.py  test_config.py  test_knowledge_store.py  test_server.py  test_tools_base.py
apex_brain/tools/: __init__.py  base.py  calendar_tool.py  datetime_tool.py  knowledge.py  smart_home.py  wait_tool.py
brain/: conversation.py
docs/: browser-storage-read.md  cursor-ide-research.md  cursor-user-rules-recommended.md  device-naming.md  ha-device-setup-checklist.md  nest-setup.md
ha_addon/: .dockerignore  Dockerfile  config.yaml  requirements.txt  run.sh
ha_addon/memory/: conversation_store.py
mcp-browser-storage/: README.md  index.js  package-lock.json  package.json
memory/: context_builder.py  fact_extractor.py  knowledge_store.py
scripts/: ha_assign_devices.py  ha_update_apex_addon.py  suggest_device_names.py  sync_version.py
(+2 files in other folders)
